Estilicé la tabla - Actualicé cambios

--- a/UI-Consulta/styles.css
+++ b/UI-Consulta/styles.css
@@ -30,7 +30,15 @@ section{
 
 }
 
-#encabezado{
+
+tr td{
+    padding: 5px;
+    border: 1px solid black;
+}
+
+
+
+.encabezado{
     color: blue;
 }
 
